@@ -71,7 +71,6 @@ COMMAND_DECL(create)
 COMMAND_DECL(cut)
 COMMAND_DECL(diff)
 COMMAND_DECL(draw)
-COMMAND_DECL(dwt)
 COMMAND_DECL(edge)
 COMMAND_DECL(flip)
 COMMAND_DECL(flop)
@@ -100,6 +99,7 @@ COMMAND_DECL(tonemap)
 COMMAND_DECL(unsharpmask)
 COMMAND_DECL(version)
 COMMAND_DECL(visualize)
+COMMAND_DECL(wavelets)
 
 cvtool_command_t commands[] = 
 {
@@ -115,7 +115,6 @@ cvtool_command_t commands[] =
     COMMAND(cut),
     COMMAND(diff),
     COMMAND(draw),
-    COMMAND(dwt),
     COMMAND(edge),
     COMMAND(flip),
     COMMAND(flop),
@@ -144,6 +143,7 @@ cvtool_command_t commands[] =
     COMMAND(unsharpmask),
     COMMAND(version),
     COMMAND(visualize),
+    COMMAND(wavelets),
     { NULL, NULL, NULL }
 };
     
